--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1028,7 +1028,7 @@
 
                     try {
                         // Placeholder URL - REPLACE WITH YOUR ACTUAL BACKEND ENDPOINT
-                        const response = await fetch(" https://events-and-appointments-manager.onrender.com/post_blog", {
+                        const response = await fetch(" http://127.0.0.1:8000/post_blog", {
                             method: "POST",
                             body: formData
                         });
@@ -1060,7 +1060,7 @@
 
                     try {
                         // Placeholder URL - REPLACE WITH YOUR ACTUAL BACKEND ENDPOINT
-                        const response = await fetch(' https://events-and-appointments-manager.onrender.com/admin_login', {
+                        const response = await fetch(' http://127.0.0.1:8000/admin_login', {
                             method: 'POST',
                             headers: {
                                 'Content-Type': 'application/json'
